[package]
name = "monitor_vs"
version = "0.3.0"
edition = "2021"

[dependencies]
active-win-pos-rs = "0.8"
chrono = "0.4"
rdev = "0.5"
ctrlc = "3.4"
clap = { version = "4.4", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
image = "0.24" 
xcap = "0.0.9"  # <--- NEW: Replaces 'screenshots'

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"