[package]
name = "monitor_vs"
version = "0.5.1"
edition = "2021"
authors = ["sathyasubrahmanya v s <sathyapel005@gmail.com>"]
[dependencies]
active-win-pos-rs = "0.8"
chrono = "0.4"
rdev = "0.5"
ctrlc = "3.4"
clap = { version = "4.4", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
xcap = "0.0.9"
# FIX: Updated from 0.24 to 0.25 to match xcap
image = "0.25" 
once_cell = "1.18"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"